# pixel4a_vcam

./: CMakeLists.txt  README.md  build_module.bat  build_module.sh  customize.sh  gradle.properties  module.prop  sepolicy.rule  service.sh  settings.gradle  setup_audio.sh  start_stream.bat
.github/workflows/: build.yml
VCamController/: settings.gradle
VCamController/app/: build.gradle
VCamController/app/src/main/: AndroidManifest.xml
VCamController/app/src/main/java/com/example/vcamcontroller/: MainActivity.kt  OverlayService.kt
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/pierre569/vcam/: MainActivity.kt
common/hardware/: camera3.h  hardware.h
mock_cutils/cutils/: compiler.h  native_handle.h
src/: vcam_receiver.cpp  vcam_wrapper.cpp
